--- a/public/index.html
+++ b/public/index.html
@@ -9,28 +9,28 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Yarin</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <meta name="description" content="personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
+  <meta itemprop="name" content="Yarin | Portfolio">
+  <meta itemprop="description" content="Explore my personal website, where I showcase my portfolio and share my creative journey with you.">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://user-images.githubusercontent.com/90701490/268040413-a9365a76-eca1-4680-b8a6-6fa573bd1e01.png">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="https://yarin181.github.io/Yarin-portfolio/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
+  <meta property="og:title" content="Yarin | Portfolio">
+  <meta property="og:description" content="Explore my personal website, where I showcase my portfolio and share my creative journey with you.">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://user-images.githubusercontent.com/90701490/268040413-a9365a76-eca1-4680-b8a6-6fa573bd1e01.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
+  <meta name="twitter:title" content="Yarin | Portfolio">
+  <meta name="twitter:description" content="https://user-images.githubusercontent.com/90701490/268040413-a9365a76-eca1-4680-b8a6-6fa573bd1e01.png">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://user-images.githubusercontent.com/90701490/268040413-a9365a76-eca1-4680-b8a6-6fa573bd1e01.png">
 </head>
 
 <body>
